--- a/prototype.html
+++ b/prototype.html
@@ -28,6 +28,15 @@ body, .header-container {
     background-position: center center;
   }
 }
+    @media (max-width: 767px) {
+  body{
+    background-color: green;
+
+
+
+  }
+}
+
     
 
 .signup-button {
